haskell/katari-compiler/test/golden/expected/04-handle-block.diagnostics.txt
error[K0400]: type mismatch: '42' is not a subtype of 'never'
  --> test/golden/cases/04-handle-block.ktr (7:28)
  |
7 |     request fetch_answer() { 42 }
  |                            ^^^^^^
